# query-vault

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: ci.yaml
benches/: ingest_buffer.rs
k8s/: deployment.yaml
migrations/: 001_init.sql  002_embeddings.sql
src/: buffer.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
src/routes/: aggregations.rs  health.rs  ingest.rs  metrics.rs  mod.rs  search.rs  ws.rs
src/services/: embedding.rs  mod.rs
src/tasks/: aggregation.rs  anomaly_detection.rs  embedding_task.rs  mod.rs  retention.rs
todo/: README.md
