[package]
name = "query-vault"
version = "0.1.0"
edition = "2021"
description = "High-performance, self-hosted, distributed query analytics platform"
authors = ["YASSERRMD <arafath.yasser@gmail.com>"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (placeholder for Phase 1)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "uuid", "chrono"] }

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP middleware
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Lock-free data structures
crossbeam = "0.8"
parking_lot = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ingest_buffer"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
